[tool.poetry]
name = "pydeco"
version = "0.1.0"
description = "Python decorators"
authors = ["ugo-quelhas <ugo.quelhas@edu.devinci.fr>"]

[tool.poetry.dependencies]
python = "^3.6"
forbiddenfruit = "^0.1.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
build = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
